--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,87 @@
     transform: rotate(360deg);
   }
 }
+
+
+/* @font-face {
+  font-family: 'Inter-Regular';
+  src: local('Inter-Regular') url('./fonts/Inter-Regular.ttf') format('truetype');
+  src: local('Inter-Regular') url('./fonts/Inter-Regular.woff') format('woff');
+  src: local('Inter-Regular') url('./fonts/Inter-Regular.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'Inter-Medium';
+  src: local('Inter-Medium') url('./fonts/Inter-Medium.ttf') format('truetype');
+  src: local('Inter-Medium') url('./fonts/Inter-Medium.woff') format('woff');
+  src: local('Inter-Medium') url('./fonts/Inter-Medium.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'Inter-SemiBold';
+  src: local('Inter-SemiBold') url('./fonts/Inter-SemiBold.ttf') format('truetype');
+  src: local('Inter-SemiBold') url('./fonts/Inter-SemiBold.woff') format('woff');
+  src: local('Inter-SemiBold') url('./fonts/Inter-SemiBold.woff2') format('woff2');
+}
+
+
+@font-face {
+  font-family: 'Mulish-Bold';
+  src: local('Mulish-Bold') url('./fonts/Mulish-Bold.ttf') format('truetype');
+  src: local('Mulish-Bold') url('./fonts/Mulish-Bold.woff') format('woff');
+  src: local('Mulish-Bold') url('./fonts/Mulish-Bold.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: Mulish-ExtraBold;
+  src: local('Mulish-ExtraBold') url('./fonts/Mulish-ExtraBold.ttf') format('truetype');
+  src: local('Mulish-ExtraBold') url('./fonts/Mulish-ExtraBold.woff') format('woff');
+  src: local('Mulish-ExtraBold') url('./fonts/Mulish-ExtraBold.woff2') format('woff2');
+} */
+
+h1{
+  font-family: 'Mulish', sans-serif;
+  font-size: 60px;
+  font-weight: 800;
+}
+
+h2{
+  font-family: 'Mulish', sans-serif;
+  font-size: 45px;
+  font-weight: 800;
+}
+
+h3{
+  font-family: 'Mulish', sans-serif;
+  font-size: 32px;
+  font-weight: 800;
+}
+
+h4{
+  font-family: 'Mulish', sans-serif;
+  font-size: 30px;
+  font-weight: 700;
+}
+
+h5{
+  font-family: 'Mulish', sans-serif;
+  font-size: 25px;
+  font-weight: 800;
+}
+
+h6{
+  font-family: 'Mulish', sans-serif;
+  font-size: 20px;
+  font-weight: 700;
+}
+
+p{
+  font-family: 'Inter', sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+}
+.btn {
+  font-family: 'Inter', sans-serif;
+  font-size: 20px;
+  font-weight: 600;
+}
